samples/_failures_safe/1761511637_4c7f34_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ca138102.c: In function ‘tokenize’:
./samples/SAFE/__tmp_ca138102.c:176:13: error: expected expression at end of input
  176 |             add_token(lexer, TOKEN_UNKNOWN,
      |             ^~~~~~~~~
./samples/SAFE/__tmp_ca138102.c:176:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ca138102.c:176:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ca138102.c:176:13: error: expected declaration or statement at end of input
